lang/src/ast/snapshots/rain_lang__ast__test__fn_call_two_arg_trailing_comma.snap
---
source: lang/src/ast/test.rs
expression: "parse_display_expr(\"foo(1, 2,)\")"
---
FnCall(
 Ident(
  foo
 )
 IntegerLiteral(
  1
 )
 IntegerLiteral(
  2
 )
)
