lang/src/ast/snapshots/rain_lang__ast__test__fn_type_spec_args.snap
---
source: lang/src/ast/test.rs
expression: "parse_display_script(\"\n        let foo = fn(a: A, b: B) {}\n        \")"
---
ModuleRoot(
 LetDeclare(
  private
  Assignment(
   Name(
    foo
   )
   AnonymousFnDeclare(
    Args(
     a
     TypeSpec(
      Ident(
       A
      )
     )
     b
     TypeSpec(
      Ident(
       B
      )
     )
    )
    Block(
    )
   )
  )
 )
)
