lang/src/ast/snapshots/rain_lang__ast__test__greater_than_eq.snap
---
source: lang/src/ast/test.rs
expression: "parse_display_expr(\"a >= b\")"
---
BinaryOp(
 Ident(
  a
 )
 >=
 Ident(
  b
 )
)
