lang/src/ast/snapshots/rain_lang__ast__test__hello_world.snap
---
source: lang/src/ast/test.rs
expression: "parse_display_script(\"\n        let main = fn() {\n            print(\\\"Hello world\\\")\n        }\n        \")"
---
ModuleRoot(
 LetDeclare(
  private
  main
  AnonymousFnDeclare(
   Args(
   )
   Block(
    FnCall(
     Ident(
      print
     )
     StringLiteral(
      Hello world
     )
    )
   )
  )
 )
)
