lang/src/ast/snapshots/rain_lang__ast__test__ident_dot_ident.snap
---
source: lang/src/ast/test.rs
expression: "parse_display_expr(\"foo.bar\")"
---
Namespace(
 Ident(
  foo
 )
 .
 bar
)
