lang/src/ast/snapshots/rain_lang__ast__test__ident_dot_ident_dot_ident.snap
---
source: lang/src/ast/test.rs
expression: "parse_display_expr(\"foo.bar.baz\")"
---
BinaryOp(
 BinaryOp(
  Ident(
   foo
  )
  .
  Ident(
   bar
  )
 )
 .
 Ident(
  baz
 )
)
