lang/src/ast/snapshots/rain_lang__ast__test__ident_dot_maths.snap
---
source: lang/src/ast/test.rs
expression: "parse_display_expr(\"a.b.c + 3 * d.e\")"
---
BinaryOp(
 Namespace(
  Namespace(
   Ident(
    a
   )
   .
   b
  )
  .
  c
 )
 +
 BinaryOp(
  IntegerLiteral(
   3
  )
  *
  Namespace(
   Ident(
    d
   )
   .
   e
  )
 )
)
