lang/src/ast/snapshots/rain_lang__ast__test__internal.snap
---
source: lang/src/ast/test.rs
expression: "parse_display_expr(\"internal._print(42)\")"
---
FnCall(
 Namespace(
  InternalLiteral(
  )
  .
  _print
 )
 IntegerLiteral(
  42
 )
)
