lang/src/ast/snapshots/rain_lang__ast__test__less_than.snap
---
source: lang/src/ast/test.rs
expression: "parse_display_expr(\"b < c && d > e\")"
---
BinaryOp(
 BinaryOp(
  Ident(
   b
  )
  <
  Ident(
   c
  )
 )
 &&
 BinaryOp(
  Ident(
   d
  )
  >
  Ident(
   e
  )
 )
)
